# deep-agent

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: custom_agent.py  demo.py  human_in_loop.py  parallel_research.py  research_agent.py
src/deep_agent/: __init__.py  config.py  state.py
src/deep_agent/agents/: __init__.py  factory.py  subagents.py
src/deep_agent/memory/: __init__.py  checkpointer.py  vector_store.py
src/deep_agent/prompts/: __init__.py  orchestrator.py  subagents.py  tool_descriptions.py
src/deep_agent/tools/: __init__.py  code_exec_tools.py  file_tools.py  human_tools.py  memory_tools.py  research_tools.py  task_tool.py  todo_tools.py
tests/: test_smoke.py
