[project]
name = "deep-agent"
version = "0.1.0"
description = "A generalised, production-oriented deep agent built on LangGraph: orchestrator + sub-agents, virtual file system, persistent memory, error recovery, and human-in-the-loop."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.6.4",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-tavily>=0.2.7",
    "tavily-python>=0.5.0",
    "markdownify>=1.2.0",
    "httpx>=0.28.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
    "chromadb>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
